--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<center><h1>Test
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>HTML</title>
+    </head>
+    <body>
+        <!-- the HTML <body> element represents the content of an HTML document -->
+        <p>This is a paragraph inside body.</p>
+    </body>
+</html>
